# robot_simulation

./: CMakeLists.txt  README.md  package.xml
612_project/: package.xml
launch/: spawn.launch  test.launch  world.launch
robot_description/config/: config.yaml
robot_description/meshes/: base_link.STL  first_link.STL
robot_description/urdf/: robot.urdf
