<?xml version="1.0"?>
<package format="2">
  <name>612_project</name>
  <version>0.1.0</version>
  <description>MEEN 612/482 Mechanics of Robotics Manipulators class project</description>
  <maintainer email="aweaver@tamu.edu">Andrew Weaver</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ethz-asl/ros_best_practices</url>
  <url type="bugtracker">https://github.com/ethz-asl/ros_best_practices/issues</url>
  <author email="aweaver@tamu.edu">Peter Fankhauser</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!--<depend>eigen</depend>-->
  <!--<depend>boost</depend>-->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
</package>
